force-app/main/default/objects/Installation_Project__c/Installation_Project__c.object-meta.xml
<CustomObject>
    <label>Installation Project</label>
    <nameField>
        <displayFormat>IP-{00000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installation Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>