force-app/main/default/objects/Installation_Project__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installation Projects</relationshipLabel>
    <relationshipName>Installation_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>