force-app/main/default/objects/Installation_Project__c/fields/External_Provisioning_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Provisioning_Id__c</fullName>
    <label>External Provisioning Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>