force-app/main/default/objects/Installation_Project__c/fields/Number_of_Chargers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Chargers__c</fullName>
    <label>Number of Chargers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>