force-app/main/default/objects/Installation_Project__c/fields/Number_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sites__c</fullName>
    <label>Number of Sites</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>