force-app/main/default/objects/Installation_Project__c/fields/Provisioning_Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Attempt_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Provisioning Attempt Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>