force-app/main/default/objects/Installation_Project__c/fields/Provisioning_HTTP_Status__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_HTTP_Status__c</fullName>
    <label>Provisioning HTTP Status</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>