force-app/main/default/objects/Installation_Project__c/fields/Provisioning_Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Last_Attempt__c</fullName>
    <label>Provisioning Last Attempt</label>
    <type>DateTime</type>
</CustomField>