force-app/main/default/objects/Installation_Project__c/fields/Provisioning_Status__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Status__c</fullName>
    <label>Provisioning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Sent</fullName><default>true</default><label>Not Sent</label></value>
            <value><fullName>Queued</fullName><default>false</default><label>Queued</label></value>
            <value><fullName>Provisioned</fullName><default>false</default><label>Provisioned</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>